--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   flutter_bloc: ^6.0.1
   equatable: ^1.2.3
+  lazy_load_scrollview: 1.1.0
 
   recase: ^3.0.0
   cached_network_image: ^2.2.0+1
