--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,25 +29,32 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
 
+  # UI libs
   carousel_slider: ^2.1.0
-
-  flutter_bloc: ^6.0.1
-  equatable: ^1.2.3
   lazy_load_scrollview: 1.1.0
-
   recase: ^3.0.0
   cached_network_image: ^2.2.0+1
 
+  # flutter_bloc
+  flutter_bloc: ^6.0.1
+  equatable: ^1.2.3
+
+  # permission
+  permission_handler: ^5.0.1+1
+
+  # export file
+  image_gallery_saver: ^1.5.0
+
   # firebase
   firebase_core: ^0.4.5
-  cloud_firestore: ^0.13.7
+  cloud_firestore: ^0.13.0+1
   firebase_analytics: ^5.0.16
   firebase_auth: ^0.16.1
   firebase_messaging: ^6.0.16
   firebase_storage: ^3.1.6
   image_picker: ^0.6.7+4
 
-  # Database
+  # local
   shared_preferences: ^0.5.7+3
   sqflite: ^1.3.1
   path_provider: ^1.6.11
