--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -64,3 +64,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:multidex:1.0.3'
 }
+
+project.ext {
+    set('FlutterFire', [
+            FirebaseSDKVersion: '21.1.0'
+    ])
+}
