--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,12 +46,12 @@ dependencies:
   image_gallery_saver: ^1.5.0
 
   # firebase
-  firebase_core: ^0.4.5
-  cloud_firestore: ^0.13.0+1
+  firebase_core: ^0.5.0
+  cloud_firestore: ^0.14.0
   firebase_analytics: ^5.0.16
-  firebase_auth: ^0.16.1
+  firebase_auth: ^0.18.0
   firebase_messaging: ^6.0.16
-  firebase_storage: ^3.1.6
+  firebase_storage: ^4.0.0
   image_picker: ^0.6.7+4
 
   # local
