--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,15 @@ dependencies:
   cached_network_image: ^2.2.0+1
   expandable: ^4.1.4
 
+  # Cache Manager
+  flutter_cache_manager: ^1.4.1
+
   # flutter_bloc
   flutter_bloc: ^6.0.1
   equatable: ^1.2.3
+
+  # Get
+  get: ^3.5.1
 
   # permission
   permission_handler: ^5.0.1+1
