--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
 
   # UI libs
   carousel_slider: ^2.1.0
-  lazy_load_scrollview: 1.1.0
+#  lazy_load_scrollview: 1.1.0
   recase: ^3.0.0
   expandable: ^4.1.4
   search_widget: ^1.0.2
@@ -40,11 +40,11 @@ dependencies:
 #  in_app_purchase: ^0.3.4+5
 
   # share
-  social_share: ^2.0.5
+#  social_share: ^2.0.5
   esys_flutter_share: ^1.0.2
 
   # social login
-  flutter_facebook_login: ^3.0.0
+#  flutter_facebook_login: ^3.0.0
 
   # cache widget
   cached_network_image: ^2.2.0+1
@@ -63,6 +63,7 @@ dependencies:
   permission_handler: ^5.0.1+1
 
   # image handle
+  image_picker: ^0.6.7+4
   image_gallery_saver: ^1.5.0
   screenshot: ^0.2.0
 
@@ -73,7 +74,6 @@ dependencies:
   firebase_auth: ^0.18.0
   firebase_messaging: ^6.0.16
   firebase_storage: ^4.0.0
-  image_picker: ^0.6.7+4
 
   # local
   shared_preferences: ^0.5.7+3
