--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   carousel_slider: ^2.1.0
   recase: ^3.0.0
   expandable: ^4.1.4
+  flutter_launcher_icons: ^0.7.5
 
   # share
   esys_flutter_share: ^1.0.2
@@ -69,10 +70,16 @@ dependencies:
   sqflite: ^1.3.1
   path_provider: ^1.6.11
 
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.png"
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: "^0.7.3"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
